--- a/index.html
+++ b/index.html
@@ -1,9 +1,69 @@
-<!DOCTYPE html>
-<html lang="es">
-<head>
-	<title>SNA</title>
-</head>
-<body>
+<!DOCTYPE HTML>
+<!--
+	Eventually by HTML5 UP
+	html5up.net | @ajlkn
+	Free for personal and commercial use under the CCA 3.0 license (html5up.net/license)
+-->
+<html>
+	<head>
+		<title>Sociedad Nacional de la Anchoveta</title>
+		<meta charset="utf-8" />
+		<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
+		<!--[if lte IE 8]><script src="assets/js/ie/html5shiv.js"></script><![endif]-->
+		<link rel="stylesheet" href="assets/css/main.css" />
+		<!--[if lte IE 8]><link rel="stylesheet" href="assets/css/ie8.css" /><![endif]-->
+		<!--[if lte IE 9]><link rel="stylesheet" href="assets/css/ie9.css" /><![endif]-->
+	</head>
+	<body>
 
-</body>
+		<!-- Header -->
+			<header id="header">
+				<h1>Sociedad Nacional de la Anchoveta</h1>
+				<p>
+					<b>Proteger la Anchoveta es proteger el futuro de todos</b><br />
+					<b>No dejes que nuestra Anchoveta desaparezca. </b><br /> <a href="mailto:contactanos@sna.org.pe">Lucha con nosotros</a>
+
+				</p>
+			</header>
+
+		<div id="mc_embed_signup">
+		<!-- Signup Form -->
+			<form action="//sna.us16.list-manage.com/subscribe/post?u=1baf9f7e81ea690ede69a94f1&amp;id=e9f3471b21" method="post" id="mc-embedded-subscribe-form" name="mc-embedded-subscribe-form" class="validate" target="_blank" novalidate>
+				<div class="mc-field-group">
+					<input type="email" name="EMAIL" id="mce-EMAIL" placeholder="tucorreo@aqui.com" />
+				</div>
+				<!-- real people should not fill this in and expect good things - do not remove this or risk form bot signups-->
+				<div style="position: absolute; left: -5000px;" aria-hidden="true"><input type="text" name="b_1baf9f7e81ea690ede69a94f1_e9f3471b21" tabindex="-1" value=""></div>
+				<div class="clear">
+				<input type="submit" value="UNIRSE" name="subscribe" id="mc-embedded-subscribe" class="button"></div>
+			</form>
+			<div id="mce-responses" class="clear">
+				<div class="response" id="mce-error-response" style="display:none"></div>
+				<div class="response" id="mce-success-response" style="display:none"></div>
+			</div>
+		</div>
+
+
+			<!-- Begin MailChimp Signup Form -->
+			<!-- <link href="//cdn-images.mailchimp.com/embedcode/classic-10_7.css" rel="stylesheet" type="text/css"> -->
+
+		<!-- Footer -->
+			<footer id="footer">
+				<ul class="icons">
+					<li><a href="http://facebook.com/sna.org.pe" class="icon fa-facebook"><span class="label">Facebook</span></a></li>
+					<!-- <li><a href="#" class="icon fa-instagram"><span class="label">Instagram</span></a></li>
+					<li><a href="#" class="icon fa-github"><span class="label">GitHub</span></a></li> -->
+					<li><a href="mailto:contactanos@sna.org.pe" class="icon fa-envelope-o"><span class="label">Email</span></a></li>
+				</ul>
+				<ul class="copyright">
+					<li>&copy; 2017, Sociedad Nacional de la Anchoveta.</li><li>Con la tecnología de: <a href="http://abig.pe">ABIG</a></li>
+				</ul>
+			</footer>
+
+		<!-- Scripts -->
+			<!--[if lte IE 8]><script src="assets/js/ie/respond.min.js"></script><![endif]-->
+			<script src="assets/js/main.js"></script>
+			<script type='text/javascript' src='//s3.amazonaws.com/downloads.mailchimp.com/js/mc-validate.js'></script><script type='text/javascript'>(function($) {window.fnames = new Array(); window.ftypes = new Array();fnames[0]='EMAIL';ftypes[0]='email';fnames[1]='FNAME';ftypes[1]='text';fnames[2]='LNAME';ftypes[2]='text';}(jQuery));var $mcj = jQuery.noConflict(true);</script>
+
+	</body>
 </html>
